--- a/djaja_works/app/src/main/res/layout/activity_profile.xml
+++ b/djaja_works/app/src/main/res/layout/activity_profile.xml
@@ -15,39 +15,26 @@
         android:gravity="top"
         android:orientation="vertical">
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#ffc107"
-            app:layout_scrollFlags="scroll|enterAlways"
-            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-            app:titleTextColor="@color/colorBlack" />
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="280sp"
             android:layout_gravity="center_vertical"
             android:gravity="center"
             android:orientation="vertical">
-            <!--<ImageView
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_gravity="center"
-                android:src="@drawable/ic_holla_logo"/>-->
+
             <ImageView
                 android:id="@+id/imageView"
                 android:layout_width="228dp"
                 android:layout_height="161dp"
-                app:srcCompat="@drawable/icon1_1" />
+                app:srcCompat="@drawable/icon1_1"/>
 
             <TextView
-                android:id="@+id/tvUsername"
+                android:id="@+id/nama_profile"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24sp"
                 android:gravity="center"
-                android:text="TextView"
+                android:text="@string/Nama"
                 android:textColor="@color/colorBlack"
                 android:textSize="30sp" />
 
@@ -66,18 +53,17 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/textview"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10sp"
                     android:layout_marginLeft="20sp"
                     android:gravity="center"
-                    android:text="E-Mail"
+                    android:text="@string/hint_email"
                     android:textColor="@color/colorBlack"
-                    android:textSize="24sp" />
+                    android:textSize="18sp" />
 
                 <TextView
-                    android:id="@+id/tvEmail"
+                    android:id="@+id/email_profile"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="103sp"
@@ -85,36 +71,7 @@
                     android:gravity="center_vertical"
                     android:text="TextView"
                     android:textColor="@color/colorBlack"
-                    android:textSize="24sp" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/textview1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10sp"
-                    android:layout_marginLeft="20sp"
-                    android:gravity="center"
-                    android:text="Umur"
-                    android:textColor="@color/colorBlack"
-                    android:textSize="24sp" />
-
-                <TextView
-                    android:id="@+id/tvUmur"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="112sp"
-                    android:layout_marginTop="10sp"
-                    android:gravity="center"
-                    android:text="TextView"
-                    android:textColor="@color/colorBlack"
-                    android:textSize="24sp" />
+                    android:textSize="18sp" />
 
             </LinearLayout>
 
@@ -130,12 +87,12 @@
                     android:layout_marginTop="10sp"
                     android:layout_marginLeft="20sp"
                     android:gravity="center"
-                    android:text="Jenis Kelamin"
+                    android:text="@string/text_JenisKelamin"
                     android:textColor="@color/colorBlack"
-                    android:textSize="24sp" />
+                    android:textSize="18sp" />
 
                 <TextView
-                    android:id="@+id/tvJK"
+                    android:id="@+id/jK_profile"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10sp"
@@ -143,8 +100,34 @@
                     android:gravity="center"
                     android:text="TextView"
                     android:textColor="@color/colorBlack"
-                    android:textSize="24sp" />
+                    android:textSize="18sp" />
+            </LinearLayout>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10sp"
+                    android:layout_marginLeft="20sp"
+                    android:gravity="center"
+                    android:text="@string/Cash"
+                    android:textColor="@color/colorBlack"
+                    android:textSize="18sp" />
+
+                <TextView
+                    android:id="@+id/tvCoin_profile"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10sp"
+                    android:layout_marginLeft="20sp"
+                    android:gravity="center"
+                    android:text="TextView"
+                    android:textColor="@color/colorBlack"
+                    android:textSize="18sp" />
             </LinearLayout>
 
 
