--- a/djaja_works/app/src/main/res/layout/activity_topup.xml
+++ b/djaja_works/app/src/main/res/layout/activity_topup.xml
@@ -110,8 +110,7 @@
                 android:layout_height="wrap_content"
                 android:padding="10sp"
                 android:textAlignment="center"
-                android:hint="@string/text_hintVoucher"
-                android:text="@string/text_conCode"/>
+                android:hint="@string/text_hintVoucher"/>
 
         </LinearLayout>
 
